feat: adds REST route to get all required registration fields
